Add `xunit.runner.visualstudio` dependency to all test projects - #11 (2 of 4) - let NuGet make its changes to `*.csproj` files - add NuGet-provided `app.config` file to Formatting.NetCore and SignalR test projects
Work around type load failures unique to running xUnit tests in VS
- get `TracingTest` working in Visual Studio

Remove duplicate test data
- led to warnings when discovering tests in VS

--- a/test/Microsoft.Web.WebPages.OAuth.Test/packages.config
+++ b/test/Microsoft.Web.WebPages.OAuth.Test/packages.config
@@ -8,4 +8,5 @@
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.0.3.12153" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
