--- a/test/System.Web.WebPages.Administration.Test/packages.config
+++ b/test/System.Web.WebPages.Administration.Test/packages.config
@@ -4,4 +4,5 @@
   <package id="Nuget.Core" version="1.6.2" targetFramework="net45" />
   <package id="xunit" version="1.9.1" targetFramework="net45" />
   <package id="xunit.extensions" version="1.9.1" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net45" />
 </packages>
