Update TestCommon to match latest xUnit.net APIs - continue to expose required xUnit.net classes in `Microsoft.TestCommon` namespace  - adjust to `sealed` classes, namespace moves, et cetera - do not use removed `Assert.ThrowsDelegate` and `Assert.ThrowsDelegateWithReturn` types  - can't use these types with underlying `Assert` using `Action` and `Func<object>` - remove `StringAssertions` since those assertions are now in xUnit.net
nits
- remove `Console.WriteLine()` from a test
- use new `Assert.Matches()` in tests checking exception messages that contain a Moq proxy type name

--- a/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
+++ b/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
@@ -39,6 +39,8 @@
   <ItemGroup>
     <Compile Include="DataAttribute.cs" />
     <Compile Include="EnumHelperTestBase.cs" />
+    <Compile Include="ExceptionUtility.cs" />
+    <Compile Include="FactDiscoverer.cs" />
     <Compile Include="InlineDataAttribute.cs" />
     <Compile Include="MatrixTheoryDataSet.cs" />
     <Compile Include="Microsoft\TestCommon\DataSets\TestDataHolder.cs" />
@@ -59,8 +61,7 @@
     </Compile>
     <Compile Include="CultureReplacer.cs" />
     <Compile Include="FactAttribute.cs" />
-    <Compile Include="StringAssertions.cs" />
-    <Compile Include="StringAssertException.cs" />
+    <Compile Include="SkippedXunitTestCase.cs" />
     <Compile Include="TheoryAttribute.cs" />
     <Compile Include="DictionaryEqualityComparer.cs" />
     <Compile Include="ExceptionAssertions.cs">
@@ -98,6 +99,7 @@
     <Compile Include="TestFile.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="TheoryDataSet.cs" />
+    <Compile Include="TheoryDiscoverer.cs" />
     <Compile Include="ThreadPoolSyncContext.cs" />
     <Compile Include="TraitAttribute.cs" />
     <Compile Include="VersionTestHelper.cs" />
