Update test projects to latest stable xUnit.net packages and `nuget.exe` - #11 (4 of 4 or so) - newer version of `xunit.abstractions` exists (2.0.1) but it   "is not compatible with 'xunit.extensibility.core 2.1.0 constraint: xunit.abstractions (= 2.0.0)'" - add xunit.runner.msbuild package to central packages.config  - need this package to execute tests after upgrade to xUnit.net 2.1.0  - need recent Beta to pick up PR xunit/xunit#807; MSBuild crashes otherwise  - for this part, do not make *.csproj changes that NuGet attempts; update our `WebStack.xunit.targets` instead - use latest `xunit.exe` because Beta xunit.runner.msbuild package needs at least 2.12  - old 2.7 minimum version, 2.8 that is at https://nuget.org/nuget.exe, and 2.12 are also all old

--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.Web.SkipStrongNames" version="1.0.0" />
   <package id="Microsoft.Web.StyleCop" version="1.0.0" />
   <package id="StyleCop" version="4.7.10.0" />
+  <package id="xunit.runner.msbuild" version="2.2.0-beta2-build3300" targetFramework="net45" />
 </packages>
