Improve speed of VS test runs - related to #11 (4 of 4 additions) - need xUnit.net AppDomain support in console runs but not in VS runs  - setting in `WebStack.xunit.targets` overrides `xunit.runner.json` default  - somewhat avoids issues such as xunit/xunit#353 and xunit/xunit#947 - pre-enumerating `[Theory]`s also slows down test discovery and execution  - remains a good idea to leave the test execution engine running

--- a/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
+++ b/test/Microsoft.TestCommon/Microsoft.TestCommon.csproj
@@ -107,6 +107,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties xunit_1runner_1json__JSONSchema="https://xunit.github.io/schema/v2.1-rc1/xunit.runner.schema.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
