Move tests to Newtonsoft.Json v7.0.1 - #72 and also related to #65 - v7.0.1 is the next major version after what the product code is built against (v6.0.4)   - this version corrects test failures I saw on a machine with .NET 4.7 (#72) - add binding redirects and include the app.config files in test projects - avoid new `TypeLoadException`s for Newtonsoft.Json that break numerous tests   - consistently disable Copy Local (aka `%(Private)` metadata) in `src` projects   - add Newtonsoft.Json references in test projects that bring it in transitively     - otherwise, product code is last to mention Newtonsoft.Json assembly

--- a/test/System.Net.Http.Formatting.NetStandard.Test/System.Net.Http.Formatting.NetStandard.Test.csproj
+++ b/test/System.Net.Http.Formatting.NetStandard.Test/System.Net.Http.Formatting.NetStandard.Test.csproj
@@ -281,6 +281,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
