added missing parts of FormDataFormatter to both Core projects

--- a/src/System.Net.Http.Formatting.NetStandard/System.Net.Http.Formatting.NetStandard.csproj
+++ b/src/System.Net.Http.Formatting.NetStandard/System.Net.Http.Formatting.NetStandard.csproj
@@ -119,6 +119,9 @@
     <Compile Include="..\System.Net.Http.Formatting\Formatting\XmlMediaTypeFormatter.cs">
       <Link>Formatting\XmlMediaTypeFormatter.cs</Link>
     </Compile>
+    <Compile Include="..\System.Net.Http.Formatting\HttpContentFormDataExtensions.cs">
+      <Link>HttpContentFormDataExtensions.cs</Link>
+    </Compile>
     <Compile Include="..\System.Net.Http.Formatting\Internal\HttpValueCollection.cs">
       <Link>Internal\HttpValueCollection.cs</Link>
     </Compile>
